adding silly lines to story

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
   		A new field lay beneath my window
   		</h1>
       <p>It was green and wide, and dotted with tiny white flowers. The sky was mostly clear, though I could see clouds in the distance.</p>
+      <p>However, the storm clouds started to roll and and big giant hail rocks started to fall crashing into people's skull.</p>
   </div>
 </body>
